# tls

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
examples/cache/: CMakeLists.txt  cache.cpp
examples/collect/accumulate/: CMakeLists.txt  accumulate.cpp
examples/collect/concurrent_fill_vector/: CMakeLists.txt  concurrent_fill_vector.cpp
examples/collect/custom_combiner/: CMakeLists.txt  custom_combiner.cpp
examples/replicate/: CMakeLists.txt  replicate.cpp
examples/replicator/: CMakeLists.txt  replicator.cpp
examples/splitter/accumulate/: CMakeLists.txt  accumulate.cpp
examples/splitter/concurrent_fill_vector/: concurrent_fill_vector.cpp
examples/splitter/custom_combiner/: custom_combiner.cpp
include/: CMakeLists.txt
include/tls/: cache.h  collect.h  replicate.h  replicator.h  split.h  splitter.h
unittest/: CMakeLists.txt  catch.hpp
unittest/cache/: unittest.cpp
unittest/collect/: collect.cpp
unittest/splitter/: splitter.cpp
